--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <section class="home section" id="home">
                 <div class="home__container container grid">
                     <div>
-                        <img src="assets/img/home.png" alt="" class="home__img">
+                        <img src="assets/img/home.png" alt="" class="home__img scale">
                     </div>
                     
                     <div class="home__data">
@@ -65,7 +65,7 @@
 
                 <div class="case__container container grid">
                     <div>
-                        <img src="assets/img/case.png" alt="" class="case__img">
+                        <img src="assets/img/case.png" alt="" class="case__img scale">
                     </div>
 
                     <div class="case__data">
@@ -87,7 +87,7 @@
                         </a>
                     </div>
 
-                    <img src="assets/img/discount.png" alt="" class="discount__img">
+                    <img src="assets/img/discount.png" alt="" class="discount__img scale">
                 </div>
             </section>
 
