--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                 streamlined design with comfortable padded earphones, delivering first-rate playback.
                             </p>
                             <a href="#" class="button button--flex interactable">
-                                <span class="button--flex">
+                                <span>
                                      </i> Add to Bag
                                 </span>
                                 <span class="home__price">INR 2999</span>
@@ -82,7 +82,7 @@
                     <div class="discount__animate">
                         <h2 class="discount__title">Immerse yourself in <br> your music</h2>
                         <p class="discount__description">Get it now, up to 50% off.</p>
-                        <a href="#" class="button button--flex interactable">
+                        <a href="#" class="button interactable">
                               Shop Now
                         </a>
                     </div>
@@ -207,8 +207,8 @@
                 <div class="footer__content">
                     <form action="" class="footer__form interactable">
                         <input type="email" placeholder="Email" class="footer__input">
-                        <button class="button button--flex">
-                            <i class="ri-send-plane-line button__icon"></i> Subscribe
+                        <button class="button">
+                            <i></i> Subscribe
                         </button>
                     </form>
     
